proj1gold submit 4: change addLast check method, use getLast()